removed redundant <br>
Former-commit-id: bfea365b5b8ce65920eb5537afd2add91b76a92f

--- a/learn.html
+++ b/learn.html
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="darkYellow pad15">
                         <h3>Suborbital Hop</h3><br>
                         <p style="padding:0;">Initial location:</p>
-                        Latitude <input type="text" placeholder="(degrees)" value="" id="latitudeSH"><br>
+                        Latitude <input type="text" placeholder="(degrees)" value="" id="latitudeSH">
                         Longitude <input type="text" placeholder="(degrees)" value="" id="longitudeSH">
                         <p style="padding:0;">Destination location:</p>
                         Latitude <input type="text" placeholder="(degrees)" value="" id="destinationlatitudeSH">
