minor layout tweak to previous calculator commint
Former-commit-id: 2a9bf661d1a8cfa2628c79da4951a7ee84501948

--- a/learn.html
+++ b/learn.html
@@ -142,7 +142,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <br>
                 <div class="black floatL">
                     <div class="darkYellow pad15">
-                      <h3>Lunar Elevator</h3>
+                      <h3>Lunar Elevator</h3><br>
                         <p>Start distance: (distances are from the centre of the Moon towards Earth)</p>
                         <input type="text" placeholder="(km)" value="" id="start">
                         <input type="checkbox" id="surface">use lunar surface
@@ -154,7 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <p>Material strength:</p>
                         <input type="text" placeholder="(Yuri)" value="" id="material">
                         <input type="checkbox" id="zylon">use Zylon
-                        <br>
+                        <br><br>
                         <button onclick="tether()">Calculate!</button>
                         <p id="resultLE">.</p>
                         <p id="resultLE2">.</p>
