Display checkbox presets in inputfields
Former-commit-id: fc282d21cde3a10f805a1cfd977f478a61af07fa [formerly d7d13f817541de1e280059079745ea121842a880]
Former-commit-id: a791a2819a2bbd523b1598d1457c980c11a36edd

--- a/learn.html
+++ b/learn.html
@@ -241,18 +241,21 @@ tether = function(){
   var strength = Number(document.getElementById("material").value);
   if(surfacecheck){
     startaltitude = moonRadius;
+    document.getElementById("start").value = moonRadius/1000;
   }
   else{
     startaltitude = startaltitude * 1000;
   };
   if(eml1check){
     endaltitude = eml1DistanceFromTheMoon;
+    document.getElementById("end").value = eml1DistanceFromTheMoon/1000;
   }
   else{
     endaltitude = endaltitude * 1000;
   };
   if(zyloncheck){
     strength = 3720000;
+    document.getElementById("material").value = 3720000;
   }
   var SCALEstart = startaltitude/EMdistance;
   var SCALEend = endaltitude/EMdistance;
