wrong sign in latitude fixed
Former-commit-id: 1ccaee2d50601cab20bfa5595cde792d9f5933b9

--- a/learn.html
+++ b/learn.html
@@ -222,9 +222,9 @@ subhop = function(){
 //optional:  distance (not implemented)
 //graphics:
   var xcoord1 = (longitude1 - 180)*256/360 - 32; //maybe 33
-  var ycoord1 = (90 - latitude1)*128/180 - 4;
+  var ycoord1 = (90 - latitude1)*128/180 + 4;
   var xcoord2 = (longitude2 - 180)*256/360 - 32; //maybe 33
-  var ycoord2 = (90 - latitude2)*128/180 - 4;
+  var ycoord2 = (90 - latitude2)*128/180 + 4;
   document.getElementById("initialicon").style.marginLeft = xcoord1+"px";
   document.getElementById("initialicon").style.marginTop = ycoord1+"px";
   document.getElementById("destinationicon").style.marginLeft = xcoord2+"px";
