--- a/learn.html
+++ b/learn.html
@@ -129,9 +129,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span>Longitude</span> <input type="text" placeholder="(degrees)" value="" id="destinationlongitudeSH">
                         <br>
                             <img class="realsize" src="mapmini.gif">
-                            <img class="realsize icons" style="z-index: 2;"
+                            <img class="realsize icons" style="z-index: 2;margin-top: 64;margin-left: -128;"
                             src="icon.png" id="initialicon">
-                            <img class="realsize icons" src="icon.png" id="destinationicon">
+                            <img class="realsize icons" src="icon.png" id="destinationicon" style="margin-top: 64;margin-left: -128;">
                         <br><br>
                         <button onclick="subhop()">Calculate!</button><br>
                         <p id="resultSH">&nbsp;</p>
@@ -221,9 +221,9 @@ subhop = function(){
   document.getElementById("resultSH").innerHTML = "Delta-v: <b>" + totalDeltav + " m/s</b> ("+Math.round((totalDeltav/3359.84)*100)+"% of an orbital mission)";
 //optional:  distance (not implemented)
 //graphics:
-  var xcoord1 = (longitude1 - 180)*256/360 - 33;
+  var xcoord1 = (longitude1 - 180)*256/360 - 34;
   var ycoord1 = (90 - latitude1)*128/180 + 5;
-  var xcoord2 = (longitude2 - 180)*256/360 - 33;
+  var xcoord2 = (longitude2 - 180)*256/360 - 34;
   var ycoord2 = (90 - latitude2)*128/180 + 5;
   document.getElementById("initialicon").style.marginLeft = xcoord1+"px";
   document.getElementById("initialicon").style.marginTop = ycoord1+"px";
