--- a/learn.html
+++ b/learn.html
@@ -227,7 +227,7 @@ subhop = function(){
   document.getElementById("initialicon").style.left = xcoord1+"px";
   document.getElementById("initialicon").style.top = ycoord1+"px";
   document.getElementById("destinationicon").style.left = xcoord2+"px";
-  document.getElementById("destinationicon").style.lop = ycoord2+"px";
+  document.getElementById("destinationicon").style.top = ycoord2+"px";
 };
 tether = function(){
   var surfacecheck = document.getElementById("surface").checked;
