--- a/learn.html
+++ b/learn.html
@@ -128,7 +128,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <img class="realsize icons" style="position: absolute; top: 54px; left: 118px;"
                             src="icon.png" id="initialicon">
                             <img class="realsize icons" src="icon.png" 
-                            style="position: absolute; top: 124px; left: 118px;"
+                            style="position: absolute; top: 54px; left: 118px;"
                             id="destinationicon">
                         </div>
                         <br><br>
@@ -223,7 +223,7 @@ subhop = function(){
   var xcoord1 = (longitude1 - 180)*256/360 + 252;
   var ycoord1 = (90 - latitude1)*128/180 - 4;
   var xcoord2 = (longitude2 - 180)*256/360 + 252;
-  var ycoord2 = (90 - latitude2)*128/180 - 4;
+  var ycoord2 = (90 - latitude2)*128/180 + 66;
   document.getElementById("initialicon").style.left = xcoord1+"px";
   document.getElementById("initialicon").style.top = ycoord1+"px";
   document.getElementById("destinationicon").style.left = xcoord2+"px";
