--- a/learn.html
+++ b/learn.html
@@ -223,7 +223,7 @@ subhop = function(){
   var xcoord1 = (longitude1 - 180)*256/360 + 252;
   var ycoord1 = (90 - latitude1)*128/180 - 4;
   var xcoord2 = (longitude2 - 180)*256/360 + 252;
-  var ycoord2 = (90 - latitude2)*128/180 + 66;
+  var ycoord2 = (90 - latitude2)*128/180 - 4;
   document.getElementById("initialicon").style.left = xcoord1+"px";
   document.getElementById("initialicon").style.top = ycoord1+"px";
   document.getElementById("destinationicon").style.left = xcoord2+"px";
