--- a/planning.html
+++ b/planning.html
@@ -23,10 +23,10 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="normalize.css">
-<link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="cssportal.tooltip.css">
-<link rel="stylesheet" href="accordian.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/cssportal.tooltip.css">
+<link rel="stylesheet" href="css/accordian.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
 
@@ -47,9 +47,7 @@ rel='stylesheet' type='text/css'>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/accordian.js"></script>
+<script src="js/modernizr-2.8.3.min.js"></script>
     </head>
         <body>
     <!-- Google Tag Manager -->
