--- a/learn.html
+++ b/learn.html
@@ -177,6 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<img id="tether" src="tether.png" style="position: absolute; top: 185px; left: 256px; transform: rotate(0deg);">
 					<img id="payload" src="payload.png" style="position: absolute; top: 316px; left: 256px;">
                 		</div>
+                		<script src="js/animationRotovator.js"></script>
                 	</div>
                 </div>
             <div class="col-12 col-m-12">     
