--- a/learn.html
+++ b/learn.html
@@ -132,10 +132,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span>Longitude</span> <input type="text" placeholder="(degrees)" value="" id="destinationlongitudeSH">
                         <br>
                         <div class="noFloat">
-                            <img class="realsize" src="mapmini.gif">
+                            <img class="realsize" src="img/mapmini.gif">
                             <img class="realsize icons" style="position: absolute; top: 54px; left: 118px;"
-                            src="icon.png" id="initialicon">
-                            <img class="realsize icons" src="icon.png" 
+                            src="img/icon.png" id="initialicon">
+                            <img class="realsize icons" src="img/icon.png" 
                             style="position: absolute; top: 54px; left: 118px;"
                             id="destinationicon">
                         </div>
