--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 	<span class="yellow">Site:</span> East rim of <span class="yellow">Lalande Crater</span>, 4.5<sup>o</sup>S 8<sup>o</sup>W
 		 </h2>
 	 </div>
-	 <div class="rowR">	 
+	 <div class="rowR black85">	 
 			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipML" style="top: 54%; left: 4%;">7
@@ -235,12 +235,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</span>
 					</button>
 				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
-			 	</div>
+			 	
 			</div>
-	</div>
-	<div class="rowR">
-		<div class="col-12 col-m-12">
-		<p class="black roundLeft" style="margin-bottom: 15px;">
+			</div>
+			<p class="pad15"> 
 			The above images were taken by the <a href="http://lroc.sese.asu.edu/">
 			Lunar Reconnaissance Orbiter</a>. The image below was taken by the 
 			<a href="http://wms.lroc.asu.edu/apollo/view?image_name=AS16-P-5396">panoramic 
@@ -248,8 +246,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			On that service, here is a link to <a href="http://bit.ly/1Ne8Yjg">Lalande</a>. Zoom in! And play with the layers menu, 
 			you open it by clicking the three diamonds on the top left of the screen. Imagery from LRO instruments, Chandrayaan, 
 			GRAIL, and Clementine are all on it.
-		</p>
-				<div class="darkYellow pix">
+				</p>
+
+	</div>
+	<div class="rowR darkYellow">
+		<div class="col-12 col-m-12">
+					<div class="darkYellow pix">
 					<button class="numbers tooltipBL" style="top: 37%; left: 70%;">10
 						<span>The bits poking out furthest from the crater wall are just emerging from shadow in this shot. 
 						The sun was 37<sup>o</sup> above the horizon at this moment, so the angle of the crater wall must be 
@@ -371,25 +373,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</div>
 	</div>
 	<div class="rowL">
-		 <h2 id="colony" class="col-10 col-m-12">
+		<h2 id="colony" class="col-10 col-m-10">
 		 	<span class="yellow">Colony:</span> Phase 1 of Cernan's Promise
 		 </h2>
 	</div>
 	<div class="rowR">
-		 <div class="col-9 col-m-10">
-		 <p class="black roundLeft">This is a rough, partial first draft. There 
+		 <div class="col-9 col-m-10 roundLeft black">
+		 <p>This is a rough, partial first draft. There 
 		 are plans for a number of models that aren't 
 		 shown yet, and plans to revise the ones that are. The whole colony is liable to be moved based on improved 
 		 information and designs. Any model is likely to be chucked and replaced with something better. All the things 
 		 in these opening sections are going to be added to, edited, shuffled, and/or replaced as plans move forward. 
-		 Earlier items that have been replaced will be saved in an archive section. The first three images below were 
-		 just added and labelled in the last few days, for example. New understandings made previous designs 
-		 outdated. And the colony is now 500 m north of its previous location, taking advantage of huge boulders.
-		 </p>
+		 Some earlier items that have been replaced will be saved in a future archive section, but that hasn't been 
+		created yet. </p>
 		 </div>
 	 </div>
+	<br>
 	 <div class="rowR">	 
-			<div class="col-11 col-m-11">
+			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibA1300.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBML" style="top: 65%; left: 60%;">1
@@ -455,7 +456,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			</div>
 	 </div>
 	 <div class="rowR">	 
-			<div class="col-11 col-m-11">
+			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibB1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipMR" style="top: 20%; left: 49%;">5
@@ -568,7 +569,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</div>
 	 </div>
 	 <div class="rowR">	 
-			<div class="col-11 col-m-11">
+			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibF1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBR" style="top: 45%; left: 9%;">12
@@ -684,7 +685,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			</div>
 	 </div>
 	<div class="rowR">	 
-		<div class="col-11 col-m-11">
+		<div class="col-11 col-m-11 darkYellow">
 			<div class="darkYellow pix">
 				<img src="http://moonwards.com/img/MIP-B.jpg" alt="overview of first structures">
 				<button class="numbers tooltipTML" style="top: 25%; left: 50%;">20
@@ -756,7 +757,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</div>
 	</div>	
 	<div class="rowR">	 
-			<div class="col-11 col-m-11">
+			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibD1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBMR" style="top: 11%; left: 52%;">24
