fix layout issue in light browsers
Former-commit-id: 87dbbfeb31858c469706e26be780c9dd50fb0b6d

--- a/index.html
+++ b/index.html
@@ -111,7 +111,87 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 	<span class="yellow">Site:</span> East rim of <span class="yellow">Lalande Crater</span>, 4.5<sup>o</sup>S 8<sup>o</sup>W
 		 </h2>
 	 </div>
-	 <div class="rowR black85">	 
+	 <div class="rowL black85">	 
+				<div class="col-4 col-m-4">
+				<div class="darkYellow pix">
+					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
+					<span>
+					<img class="tooltip-img" src="http://moonwards.com/img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
+						This is where one of the highest concentrations of thorium detected on the Moon is. 
+						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
+						there is thorium, there is KREEP - Potassium, 
+						Rare Earth Elements, and Phosphorus. 
+						Most of the Moon has only traces of K and P, even less of REE. 
+						K and P are necessary for 
+						plant growth. 
+						The rare earth elements neodymium and 
+						samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. Even better, 
+						once industry is established, thorium can be used for building nuclear thermal rockets (NTRs). 
+						NTRs are a lot more powerful and efficient than anything in use today, but they have never been built 
+						because of the politics of radiation risk. Not a problem on the Moon.
+					</span>
+					</button>
+					<button class="numbers tooltipBMR" style="top: 62%; left: 62%;">2
+					<span>As with all other sites that were considered, this site is on the 'shore' of a basalt mare. Both mare 
+					and highland materials 
+					are in the immediate vicinity. Unlike the other sites, this very young crater very probably punched 
+					through both materials. 
+					Bedrock of both minerologies should be within easy reach, relatively speaking.
+					</span>
+					</button>
+					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">3
+					<span>About another 100 km north is the equator. This site is close enough to the equator that putting 
+					a fuel depot in orbit above it would work well. Efficient trajectories to rendezvous with it would 
+					be available daily, less ideal ones almost hourly. The further you are from the equator, the less frequently 
+					rendezvous in orbit is possible. (At the poles you could do it as long as you could reorient your direction 
+					of launch easily, though.)
+					</span>
+					</button>
+				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
+			 	
+			</div>
+
+			</div>
+			<div class="col-4 col-m-4"> 
+				<div class="darkYellow pix">
+						<button class="numbers tooltipB" style="top: 25%; left: 66%;">4
+							<span>Here is a collection of especially large boulders, 10 to 30 
+							m across above the surface. They are all partially submerged and so 
+							some will be larger below the surface. 
+							Boulders are much more common near the lips of 
+							craters because they are created by the blast of the impact, thrown high 
+							into the - uh, where the air would be if it existed - and many come down 
+							close by. 
+							And because Lalande is a young crater, they haven't been buried by 
+							dust. Boulders are useful as thermal mass, anchors, counterweights, 
+							radiation shielding, and feedstock for refining processes.
+							</span>
+						</button>
+						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">5
+						<span>Case in point - the boulders with the especially long shadows just left of the 
+						marker. They are huge, the size of barns. They are so useful, the first phase of 
+						the initial base will go here, nestled against them. Their stability and height 
+						allow the use of a gantry crane, and provide a firm anchor for cables so 
+						rovers can work on the steep inside face of Lalande. In fact they will be 
+						referred to so much i've named them Gibraltar, because they are anchors.
+						</span>
+						</button>
+						<button class="numbers tooltipB" style="top: 48%; left: 51%;">6
+						<span>
+						Here is a fresh crater, right beside Lalande which is 
+						also a fresh crater. 
+						It is a good size to be interesting for future plans - 300 m across - 
+						and in the right place - 150 m from Lalande. 
+						Once the colony is really growing, there are some 
+						neat things you can do here. Excavate a channel between it and Lalande, 
+						and cover the entire crater with a geodesic dome. But that takes a lot of 
+						infrastructure, so it will be part of later phases of construction.  
+						It gets a name too. Teacup Crater.
+						</span>
+						</button>
+						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
+				</div>
+			</div>
 			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipML" style="top: 54%; left: 4%;">7
@@ -159,85 +239,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<img src="http://moonwards.com/img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
 				</div>
 			</div>
-			<div class="col-4 col-m-4"> 
-				<div class="darkYellow pix">
-						<button class="numbers tooltipB" style="top: 25%; left: 66%;">4
-							<span>Here is a collection of especially large boulders, 10 to 30 
-							m across above the surface. They are all partially submerged and so 
-							some will be larger below the surface. 
-							Boulders are much more common near the lips of 
-							craters because they are created by the blast of the impact, thrown high 
-							into the - uh, where the air would be if it existed - and many come down 
-							close by. 
-							And because Lalande is a young crater, they haven't been buried by 
-							dust. Boulders are useful as thermal mass, anchors, counterweights, 
-							radiation shielding, and feedstock for refining processes.
-							</span>
-						</button>
-						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">5
-						<span>Case in point - the boulders with the especially long shadows just left of the 
-						marker. They are huge, the size of barns. They are so useful, the first phase of 
-						the initial base will go here, nestled against them. Their stability and height 
-						allow the use of a gantry crane, and provide a firm anchor for cables so 
-						rovers can work on the steep inside face of Lalande. In fact they will be 
-						referred to so much i've named them Gibraltar, because they are anchors.
-						</span>
-						</button>
-						<button class="numbers tooltipB" style="top: 48%; left: 51%;">6
-						<span>
-						Here is a fresh crater, right beside Lalande which is 
-						also a fresh crater. 
-						It is a good size to be interesting for future plans - 300 m across - 
-						and in the right place - 150 m from Lalande. 
-						Once the colony is really growing, there are some 
-						neat things you can do here. Excavate a channel between it and Lalande, 
-						and cover the entire crater with a geodesic dome. But that takes a lot of 
-						infrastructure, so it will be part of later phases of construction.  
-						It gets a name too. Teacup Crater.
-						</span>
-						</button>
-						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
-				</div>
-			</div>
-			<div class="col-4 col-m-4">
-				<div class="darkYellow pix">
-					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
-					<span>
-					<img class="tooltip-img" src="http://moonwards.com/img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
-						This is where one of the highest concentrations of thorium detected on the Moon is. 
-						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
-						there is thorium, there is KREEP - Potassium, 
-						Rare Earth Elements, and Phosphorus. 
-						Most of the Moon has only traces of K and P, even less of REE. 
-						K and P are necessary for 
-						plant growth. 
-						The rare earth elements neodymium and 
-						samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. Even better, 
-						once industry is established, thorium can be used for building nuclear thermal rockets (NTRs). 
-						NTRs are a lot more powerful and efficient than anything in use today, but they have never been built 
-						because of the politics of radiation risk. Not a problem on the Moon.
-					</span>
-					</button>
-					<button class="numbers tooltipBMR" style="top: 62%; left: 62%;">2
-					<span>As with all other sites that were considered, this site is on the 'shore' of a basalt mare. Both mare 
-					and highland materials 
-					are in the immediate vicinity. Unlike the other sites, this very young crater very probably punched 
-					through both materials. 
-					Bedrock of both minerologies should be within easy reach, relatively speaking.
-					</span>
-					</button>
-					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">3
-					<span>About another 100 km north is the equator. This site is close enough to the equator that putting 
-					a fuel depot in orbit above it would work well. Efficient trajectories to rendezvous with it would 
-					be available daily, less ideal ones almost hourly. The further you are from the equator, the less frequently 
-					rendezvous in orbit is possible. (At the poles you could do it as long as you could reorient your direction 
-					of launch easily, though.)
-					</span>
-					</button>
-				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
-			 	
-			</div>
-			</div>
+			<br>
 			<p class="pad15"> 
 			The above images were taken by the <a href="http://lroc.sese.asu.edu/">
 			Lunar Reconnaissance Orbiter</a>. The image below was taken by the 
@@ -247,7 +249,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			you open it by clicking the three diamonds on the top left of the screen. Imagery from LRO instruments, Chandrayaan, 
 			GRAIL, and Clementine are all on it.
 				</p>
-
+			<br>
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
