--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -25,4 +25,5 @@
 <script type="text/javascript" src="core.js"></script>
 <script type="text/javascript" src="scen.js"></script>
 <script type="text/javascript" src="eventchain.js"></script>
+<script type="text/javascript" src="stuff.js"></script>
 </html>
