info page stuff, documentation, 1 bugfix, shell comments.
Former-commit-id: 57636a3768193fff69094ae71d5cc79bf680d695

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -8,6 +8,7 @@
 <body bgcolor="#000000" style="color: #FF9900;">
 <h1>Moonwards <sub><i>The Game</i> <small>( hopefully no Copyright violated)</small></sub></h1>
 <p>(Crappy graphics by intention, to scare of non-nerds :p)</p>
+<p>If you are reading this sentence, you have a development version of the game. Do not expect anything to work</p>
 <p id="timing">0</p>
 <p>Start typing commands!</p>
 <input type="text" value="" id="command">
