added SketchFab model to index.html
Former-commit-id: e3599f276aec7756d45d1f814da804bfdc212d87 [formerly aa381f92f5ddebc1a91209a55bb57cec7cf48d6d]
Former-commit-id: fafcc1b526f244c0c0932a5613baed17b368603a

--- a/index.html
+++ b/index.html
@@ -391,7 +391,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 </div>
 	 </div>
 	<br>
-	 <div class="rowR">	 
+	 <div class="rowR">	
+			<div class="col-11 col-m-11 darkYellow">
+				<div class="darkYellow pix">
+					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+    <a href="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Virtual Lunar Colony</a>
+    by <a href="https://sketchfab.com/briligg?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">briligg</a>
+    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
+				</div>
+			</div>
+ 
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibA1300.jpg" alt="overview of first structures">
@@ -690,7 +700,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="col-11 col-m-11 darkYellow">
 			<div class="darkYellow pix">
 				<img src="http://moonwards.com/img/MIP-B.jpg" alt="overview of first structures">
-				<button class="numbers tooltipTML" style="top: 25%; left: 50%;">20
+				<button class="numbers tooltipBL" style="top: 28%; left: 46%;">20
 	 			<span>
 	 				The MIPs are powered by sapphire Fresnel lenses. The lane between the raised rails is the 
 	 				fixed bed portion. The frame of this
