Updated the game scripts
Former-commit-id: b5ecdecde9df6fd121e6dcdaf2bc73103eebb49c [formerly 7e9c502efec77548c078a6ae236d71d2d19c072c]
Former-commit-id: d9eb3562fafe5762d94f32455812269927e6c0a6

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -7,9 +7,13 @@
 </head>
 <body bgcolor="#000000" style="color: #FF9900;">
 <h1>Moonwards <sub><i>The Game</i> <small>( hopefully no Copyright violated)</small></sub></h1>
+<noscript>
+<p>If you are trying to play this game without JavaScript, you are having a bad problem and will not go to space today.</p>
+</noscript>
 <p>(Crappy graphics by intention, to scare of non-nerds :p)</p>
 <p>If you are reading this sentence, you have a development version of the game. Do not expect anything to work</p>
 <p id="timing">0</p>
+<p id="budget">Budget: <a style="color: #e02200">1000</a></p>
 <p>Start typing commands!</p>
 <input type="text" value="" id="command">
 <script>
@@ -21,6 +25,7 @@
 <!--Graphical test area, not implemented, because, who needs a GUI anyway?--->
 <div id="graf">
 </div>
+<p><a href="tutorial.html">Need a quick tutorial?</a></p>
 </body>
 <!---The following scripts are for handling basic events--->
 <script type="text/javascript" src="core.js"></script>
