--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -9,9 +9,11 @@
 <h1>Moonwards <sub><i>The Game</i> <small>( hopefully no Copyright violated)</small></sub></h1>
 <noscript>
 <p>If you are trying to play this game without JavaScript, you are having a bad problem and will not go to space today.</p>
+<p>However, consider allowing scripts here, the scripts are for nothing but the game, no trackers or anything. There is localStorage however, but that is for creating a savefile. The game works just as fine if you turn it off.</p>
 </noscript>
 <p>(Crappy graphics by intention, to scare of non-nerds :p)</p>
 <p>If you are reading this sentence, you have a development version of the game. Do not expect anything to work</p>
+<p style="float: right" id="note"></p>
 <p id="timing">0</p>
 <p id="budget">Budget: <a style="color: #e02200">1000</a></p>
 <p>Start typing commands!</p>
