This project is slowly crawling along...
Former-commit-id: 4d1fddea28035a5e750d88848af421d3b54a0158

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <style>
+.rtttrt{
+width: 200px;
+}
   </style>
 </head>
 <body bgcolor="#000000" style="color: #FF9900;">
@@ -11,9 +14,9 @@
 <p>If you are trying to play this game without JavaScript, you are having a bad problem and will not go to space today.</p>
 <p>However, consider allowing scripts here, the scripts are for nothing but the game, no trackers or anything. There is localStorage however, but that is for creating a savefile. The game works just as fine if you turn it off. Type "nosave" in the squacky to turn of localStorage usage.</p>
 </noscript>
-<p>If you are reading this sentence, you have a development version of the game. Do not expect anything to work</p>
+<p>If you are reading this paragraph, you have a development version of the game. Do not expect anything to work</p>
 <p style="float: right" id="note"></p>
-<p id="timing">0</p>
+<p id="timing" style="color: #b09985">0</p>
 <p id="budget">Budget: <a style="color: #e02200">1000</a></p>
 <p>Start typing commands!</p>
 <input type="text" value="" id="command">
