--- a/browsergame/tutorial.html
+++ b/browsergame/tutorial.html
@@ -15,7 +15,8 @@ You actually have to type <i>commands</i> to do stuff...</br>
 Basic gameplay consist of researching new technologies and buy hardware.<br>
 Once you have a sufficient amount of equipment on the Moon, you can start doing stuff with it.<br><br>
 A good place to start is researching some technology. Type "rd" in the Squacky.<br>
-(Squacky is the propper name of the command line.)
+(Squacky is the propper name of the command line.)<br>
+Other important places are "launch", "shop" and TBD.
 </p>
 <p>This is your goal:</p>
 <img src="images/moon.gif">
