--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -29,7 +29,7 @@ width: 200px;
 <!--Graphical test area, not implemented, because, who needs a GUI anyway?--->
 <div id="graf">
 </div>
-<p><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('rd')">R&D</div><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch')">Launch</div><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('shop')">Shop</p></div>
+<p><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('rd');command='rd'">R&D</div><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div><div style="width:150px;background:white;color:#0000ff" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('shop');command='shop'">Shop</p></div>
 <p><a href="tutorial.html">Need a quick tutorial?</a></p>
 </body>
 <!---The following scripts are for handling basic events--->
