--- a/planning.html
+++ b/planning.html
@@ -125,11 +125,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 This is a collaborative project open to anyone who can pitch in.
 		 If you are interested in participating, leave a message in the forum or email me, kim@moonwards.com. You 
 		 can also go to the <a href="https://github.com/briligg/moonwards">GitHub page</a>. 
-		 That has just been set up and will be fleshed out in the 
-		 next few days. This page will also change be completely redone this week and next. Input welcome.  
+		 Another interesting window is the project's <a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">
+		 Realtimeboard</a> entries. Input is always welcome.  
 		 What should be added here? What needs improving? What would you like to work on? What do you think?</span><br><br>
-		 <i >Note Mar 1 - This page is in the process of being extensively revised. Also, as a general rule everything 
-		 on the site is edited on an ongoing basis.</i>
+		 <i>Note May 14 2016 - This page has stalled a little as i try to figure out how best to use it. A lot of 
+		 what it was meant to do has now been taken over by the GitHub and RealTimeBoard pages mentioned above. I have 
+		 in fact built several new models over the last few months, and developed plans together with others. 
+		 You can see most of them at my <a href="https://sketchfab.com/briligg">Sketchfab account</a>, though many 
+		 have yet to be configured and annotated. I am about to leave for the<a href="http://isdc.nss.org/2016/#/">
+		  International Space Development 
+		 Conference</a>, where i give 3 presentations this year. I can at least say that they will see these new 
+		 models and updated plans. When i get back, i'll settle down to updating everything here. Thank you for 
+		 your patience. :)</i>
 		 </p>
 		 </div>
 	 </div>
